--- a/src/pages/egirls.css
+++ b/src/pages/egirls.css
@@ -1,53 +1,18 @@
-/* Styles for Egirls component */
-
-.card {
-    position: relative;
-    overflow: hidden;
-    border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: transform 0.3s ease, z-index 0.3s ease;
-}
-
-.card:hover,
-.card.selected {
-    z-index: 20;
-    transform: scale(1.05);
-}
-
-.card .image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-size: cover;
-    background-position: center;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.card.selected .image {
-    opacity: 0;
-    transform: scale(1.1);
-}
-
-.card .content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.7);
+.animated-text {
     color: white;
-    padding: 1rem;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    /* Color inicial */
+    animation: colorChange 4s infinite;
+    /* Nombre de la animación, duración de 3 segundos, repetición infinita */
 }
 
-.card.selected .content {
-    opacity: 1;
+@keyframes colorChange {
+    0% {
+        color: pink;
+        /* Empieza en rosa */
+    }
+
+    100% {
+        color: rgb(236,83,160);
+        /* Termina en blanco */
+    }
 }
