--- a/src/pages/Collab.css
+++ b/src/pages/Collab.css
@@ -1,29 +1,11 @@
-/* Animaciones para que los elementos aparezcan progresivamente */
-@keyframes fade-in {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.animate-fade-in {
-    animation: fade-in 1s ease-out forwards;
-}
-
-/* Delays para las animaciones */
-.delay-200 {
-    animation-delay: 0.2s;
-}
-
-.delay-400 {
-    animation-delay: 0.4s;
-}
-
-.delay-600 {
-    animation-delay: 0.6s;
-}
+ #style1 {
+     /* Tamaño del texto */
+     font-weight: bold;
+     /* margin-bottom: 1.5rem; */
+     letter-spacing: 0.05em;
+     font-family: 'Inter', sans-serif;
+     color: transparent;
+     /* Hace que el relleno del texto sea transparente */
+     -webkit-text-stroke: 2px #F5E401;
+     /* Grosor y color del contorno del texto */
+ }
